--- a/data/blog/angular-react-vue-2023.mdx
+++ b/data/blog/angular-react-vue-2023.mdx
@@ -58,7 +58,7 @@ as well.
 
 Let’s start from scratch. 3 folders should be created (see below).
 
-![Project folders](/static/images/2an.png)
+![Project folder](/static/images/2an.png)
 
 In our case, we consider Angular app as a shell, and `PROFILE` together
 with `SETTINGS` as the remote modules.
